--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 .mh-1 {
     font-size: 2.5em;
 }
+
+.include-box {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1rem;
+    column-gap: 3rem;
+    margin-left: 33%;
+    /* justify-content: center; */
+    /* align-items: center; */
+}
